--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  background: black;
+    background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgba(5,8,114,1) 0%, rgba(7,3,53,1) 97.5% );
 }
 
 #caixa-numeros{
@@ -25,6 +25,10 @@ body{
     font-size: 50px;
 }
 
+.numero-verde{
+    color: #C5FB01;
+}
+
 #caixa-botoes{
      margin-top: 20px;
      text-align: center;
@@ -36,4 +40,5 @@ body{
     padding: 6px 16px;
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
